--- a/install.ini
+++ b/install.ini
@@ -1,7 +1,7 @@
 [install.ini]
 domain=my-magento-2-webshop.com
 base_url=http://my-magento-2-webshop.com/
-magento_release=2.3.0
+magento_release=2.3.4
 
 database_host=localhost
 database_name=magento2
@@ -11,25 +11,25 @@ database_pass=secret123
 linux_magento_user_name=magento
 linux_magento_user_pass=magento
 
-magento_connect_public_key=123456789
-magento_connect_private_key=123456789
+magento_connect_public_key=6c3c6d4bf899aa5f11e0624d8853299f
+magento_connect_private_key=0274adc429c075f46782ec67918c4ba0
 
-language_code=en_US
-currency_code=USD
+language_code=vi_VN
+currency_code=VND
 
 admin_login_name=admin
-admin_login_pass=admin123
-admin_email=info@my-magento-2-webshop.com
+admin_login_pass=Abc123!@
+admin_email=khoaln6@gmail.com
 
 install_basics=yes
 install_nginx=yes
 install_apache=no
 install_mysql=yes
 install_php=yes
-install_mailer=yes
+install_mailer=no
 install_certbot=no
 install_composer=yes
-install_redis=no
+install_redis=yes
 
 swaping_settings=no
 
